--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Menu Einkauf</string>
-    <string name="logo_name">Menu Einkauf</string>
+    <string name="app_name">MyMenu</string>
+    <string name="logo_name">MyMenu</string>
     <string name="logo_action">Touch Zufalls-Menu</string>
 
     <!-- TODO: Remove or change this placeholder text -->
